correção de bugs e melhorias pontuais